RESOLVED FIXED298676
[Interop] WPT test "pointerevent_click_is_a_pointerevent.html?mouse" is failing when run via webdriver
https://bugs.webkit.org/show_bug.cgi?id=298676
Summary [Interop] WPT test "pointerevent_click_is_a_pointerevent.html?mouse" is faili...
Lily Spiniolas
Reported 2025-09-10 13:02:25 PDT
Attachments
Lily Spiniolas
Comment 1 2025-09-10 13:13:47 PDT
Lily Spiniolas
Comment 2 2025-09-25 14:25:20 PDT
This is caused by web driver failing to correctly direct focus during the final subtest after the frame is clicked during the third subtest. This is a regression from 296164@main. It does not seem to affect normal browsing, only automated tests.
Blaze Burg
Comment 3 2025-09-29 10:40:26 PDT
EWS
Comment 4 2025-09-29 13:47:49 PDT
Committed 300711@main (f51e778746b7): <https://commits.webkit.org/300711@main> Reviewed commits have been landed. Closing PR #51511 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.