[Interop] WPT test "pointerevent_click_is_a_pointerevent.html?mouse" is failing when run via webdriver https://bugs.webkit.org/show_bug.cgi?id=298676 rdar://159477280

Reviewed by NOBODY (OOPS!).

WebAutomationSessionProxy::focusFrame now takes an optional frameID instead of
a frameID, and focuses the main frame if frameID is not set. The method is
now called by WebAutomationSession::switchToBrowsingContext even when frameID
is empty so that focus is explicitly returned to the main frame.

At least one WPT test is known to have been affected by this bug when run via
webdriver: pointerevent_click_is_a_pointerevent.html?mouse has a failing subtest
as a result. With these changes, this test now completely passes.

These changes were made previously (https://commits.webkit.org/297613@main) but
were reverted after causing all webdriver `user_prompt` tests to fail. This
was due to the callback never getting called in
`WebAutomationSession::switchToBrowsingContext` when the frameID did not have
a value. These changes no longer remove the frameID check in this location.

* Source/WebKit/UIProcess/Automation/WebAutomationSession.cpp:
(WebKit::WebAutomationSession::switchToBrowsingContext):
* Source/WebKit/WebProcess/Automation/WebAutomationSessionProxy.cpp:
(WebKit::WebAutomationSessionProxy::focusFrame):
* Source/WebKit/WebProcess/Automation/WebAutomationSessionProxy.h:
* Source/WebKit/WebProcess/Automation/WebAutomationSessionProxy.messages.in: